# circus

./: .gitconfig.local.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Brewfile  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  README.md  ROADMAP.md  ROLES.md  TESTING.md  TESTING_GUIDE_FOR_JULES.md  TESTING_STRATEGY.md  init.sh  install.sh  run-tests.sh  temp_install_test_deps.sh
configs/: privacy-hardening.yaml  security-hardening.yaml
defaults/: README.md  activity_monitor.sh  alfred.sh  app_store.sh  auto_updates.sh  database.sh  dock.sh  docker.sh  finder.sh  firewall.sh  iterm2.sh  keyboard.sh  mariadb.sh  mission_control.sh  nvm.sh  safari.sh  screensaver.sh  system.sh  textedit.sh  time_machine.sh  trackpad_and_mouse.sh  ui_and_ux.sh  vscode.sh
docs/: ALFRED.md  APPLESCRIPTS.md  ARCHITECTURE.md  BACKLOG-GUI-UX.md  BACKUP_BACKENDS.md  BOOTSTRAP.md  COMMANDS.md  CREATING_PLUGINS.md  CROSS_PLATFORM.md  CUSTOMIZATION.md  DOTFILES.md  MACOS_COMMANDS.md  PROFILES.md  RAYCAST.md  README.md  SECRETS.md  SETTINGS_ROADMAP.md  TESTING.md  TROUBLESHOOTING.md  UPDATING.md  V1_IMPLEMENTATION_PLAN.md  VIRTUAL_MACHINES.md  YAML_CONFIGURATION.md
etc/: Brewfile  fortunes.txt
install/: 00-preflight-checks.sh  01-introduction-and-user-interaction.sh  01-repository-management.sh  02-archive-handling.sh  02-logging-setup.sh  03-homebrew-installation.sh  03-preflight-system-checks.sh  04-macos-system-settings.sh  (+39 more)
templates/projects/python-cli/: .gitignore  README.md  pyproject.toml  template.conf
templates/projects/python-cli/src/PROJECT_NAME/: __init__.py  cli.py
(+1140 files in other folders)
